Improved responsiveness of the hero section and added the phrase 'My Tech Skills'. Enhanced avatar responsiveness on mobile devices and ensured the validity of the Education section. Updated the contact form to display a submission result. Adjusted the Earth size for medium screens.

--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ body {
 
   /*  work experience section */
   .work-container {
-    @apply grid lg:grid-cols-3 grid-cols-1 gap-5 mt-12;
+    @apply grid lg:grid-cols-3 grid-cols-1 gap-5 max-md:gap-0 max-md:gap-y-5 mt-12;
   }
 
   .work-canvas {
